coarsening, weights and degree matrices

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ subreddit_comments/**
 comment_counts/.DS_Store
 .DS_Store
 olddata/**
+weights.txt
+coarsening_weights.txt
+coarsening_edges.txt
+coarsening_clusters.txt
+coarsening_weights_matrix.txt
+coarsening_degrees_matrix.txt
+coarsening_degrees_matrix.tar.gz
